# rusty_java_final_lab

./: .env  .gitignore  Cargo.toml  README.md
exam-ui/: README.md  index.html  package-lock.json  package.json
exam-ui/src/: App.vue
exam-ui/src-tauri/: Cargo.toml
exam-ui/src-tauri/src/: lib.rs  log.rs  main.rs  seat.rs  server.rs
src/: lib.rs  main.rs
src/object/: mod.rs  reservation.rs  seat.rs
src/score/: db.rs  lib.rs  mod.rs  student.csv
src/server/: mod.rs  seat.rs  server.rs
