[package]
name = "exam"
version = "0.1.0"
edition = "2024"

[dependencies]
uuid = { version = "1.19.0",features = ["v4"] }
anyhow = "1.0.100"
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
rand = "0.9.2"
tokio = {version = "1.48.0", features = ["full"]}
sqlx = {version = "0.8.6", features = ["sqlite", "runtime-tokio", "tls-native-tls"] }
serde = { version = "1.0", features = ["derive"] }
dotenvy = "0.15.7"
parking_lot = "0.12.5"
csv = "1.1"

