[package]
name = "exam-ui"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "exam_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.19.0",features = ["v4"] }
anyhow = "1.0.100"
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
rand = "0.9.2"
tokio = {version = "1.48.0", features = ["full"] }
sqlx = {version = "0.8.6", features = ["sqlite", "runtime-tokio", "tls-native-tls"] }
dotenvy = "0.15.7"
parking_lot = "0.12.5"
csv = "1.1"
chrono = "0.4.42"

